# osp_marketing_tools

./: Dockerfile  README.md  codes-llm.md  codes.md  guide.md  osp_codes.py  osp_mcp_codes.py  phases.md  philosophy.md  positivity-pass.md  pyproject.toml  workflow.md
osp_mcp_codes/: osp_mcp_codes.py
src/: osp_mcp_codes.py
src/osp_editing_codes/: __init__.py  codes-llm.md  guide-llm.md  meta-llm.md  product-value-map-llm.md  server.py
src/osp_marketing_tools/: README.md  codes-llm.md  guide-llm.md  server.py
