[project]
name = "osp-editing-codes"
version = "0.1.0"
description = "OSP Editing Server using Model Context Protocol"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mcp[cli]",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true